--- a/templates/index.html
+++ b/templates/index.html
@@ -15,14 +15,14 @@
     <div class="menu">
       <div class="card">
         <h2>Host a Game</h2>
-        <p>Create a room and choose a Spotify playlist</p>
-        <a href="/host" class="btn btn-primary">Create Room</a>
+        <p>Create a blindtest and choose a Spotify playlist</p>
+        <a href="/host" class="btn btn-primary">Create Blindtest</a>
       </div>
 
       <div class="card">
         <h2>Join a Game</h2>
-        <p>Enter a 4-digit PIN to join a room</p>
-        <a href="/participant" class="btn btn-secondary">Join Room</a>
+        <p>Enter a 4-digit PIN to join a Blindtest</p>
+        <a href="/participant" class="btn btn-secondary">Join Blindtest</a>
       </div>
     </div>
   </div>
