--- a/templates/participant.html
+++ b/templates/participant.html
@@ -237,7 +237,7 @@
         <div class="text-center">
           <a href="/participant"
             class="inline-block bg-gradient-to-r from-cyan-500 to-teal-500 hover:from-cyan-600 hover:to-teal-600 text-white font-bold py-4 px-12 rounded-lg shadow-lg transition-all text-lg">
-            🎮 Play Again
+            Play Again
           </a>
         </div>
       </div>
